# image_imu_file_processor

./: .gitignore  CMakeLists.txt  package.xml
include/image_imu_file_processor/: img_decoder.h  img_file_name_checker.h  img_imu_align.h  imu_reader.h  rosbag_reader.h
scripts/: decode_images.bash
src/: click_read_image.cc  offline_stereo_rectify.cc  offline_stereo_rectify_dir.cc  offline_stereo_remap.cc  rect_cal_imgs_disp.cc  resize_image.cc  ros_bag_creater.cc  ros_bag_from_left_right_cam.cc  stereo_optical_match.cc  test_img_align.cc  test_img_decoder.cc  test_img_imu_align.cc  test_img_imu_align_self.cc  test_imu_reader.cc  test_rosbag_reader.cc  test_stereo_match.cc
src/tool/: rosbag_img_interval_check.cc  rosbag_img_to_file.cc  rosbag_imu_modifer.cc
src/tools/: rosbag_img_to_file.cc  rosbag_imu_interval_check.cc  save_rosimg_to_file.cc
